implementation/generated_ASTs/test/test262/tests/language/statements/switch/syntax/redeclaration/function-name-redeclaration-attempt-with-function.js.esl
function buildAST (___internal_esl_global) {
__n0 := {  };
__n0["type"] := "Program";
__n0["sourceType"] := "script";
__n2 := {  };
__n2["type"] := "ExpressionStatement";
__n3 := {  };
__n3["type"] := "CallExpression";
__n4 := {  };
__n4["type"] := "Identifier";
__n4["name"] := "$DONOTEVALUATE";
__n3["callee"] := __n4;
__n5 := [  ];
__n3["arguments"] := __n5;
__n2["expression"] := __n3;
__n6 := {  };
__n6["type"] := "SwitchStatement";
__n7 := {  };
__n7["type"] := "Literal";
__n7["value"] := 0.;
__n7["raw"] := "0";
__n6["discriminant"] := __n7;
__n10 := {  };
__n10["type"] := "SwitchCase";
__n11 := {  };
__n11["type"] := "Literal";
__n11["value"] := 1.;
__n11["raw"] := "1";
__n10["test"] := __n11;
__n13 := {  };
__n13["type"] := "ExpressionStatement";
__n14 := {  };
__n14["type"] := "Identifier";
__n14["name"] := "f";
__n13["expression"] := __n14;
__n12 := [ __n13 ];
__n10["consequent"] := __n12;
__n9 := [ __n10 ];
__n15 := {  };
__n15["type"] := "SwitchCase";
__n15["test"] := null;
__n17 := {  };
__n17["type"] := "ExpressionStatement";
__n18 := {  };
__n18["type"] := "Identifier";
__n18["name"] := "f";
__n17["expression"] := __n18;
__n16 := [ __n17 ];
__n15["consequent"] := __n16;
__n19 := [  ];
__n8 := [ __n9, __n15, __n19 ];
__n6["cases"] := __n8;
__n1 := [ __n2, __n6 ];
__n0["body"] := __n1;
__n0["optimised"] := true;
__n20 := [  ];
__n0["variableDeclarations"] := __n20;
__n22 := {  };
__n22["type"] := "FunctionDeclaration";
__n23 := {  };
__n23["type"] := "Identifier";
__n23["name"] := "f";
__n22["id"] := __n23;
__n24 := [  ];
__n22["params"] := __n24;
__n25 := {  };
__n25["type"] := "BlockStatement";
__n26 := [  ];
__n25["body"] := __n26;
__n27 := [  ];
__n25["variableDeclarations"] := __n27;
__n28 := [  ];
__n25["functionDeclarations"] := __n28;
__n25["codeType"] := "function";
__n25["strict"] := false;
__n22["body"] := __n25;
__n22["generator"] := false;
__n22["async"] := false;
__n22["expression"] := false;
__n29 := {  };
__n29["type"] := "FunctionDeclaration";
__n30 := {  };
__n30["type"] := "Identifier";
__n30["name"] := "f";
__n29["id"] := __n30;
__n31 := [  ];
__n29["params"] := __n31;
__n32 := {  };
__n32["type"] := "BlockStatement";
__n33 := [  ];
__n32["body"] := __n33;
__n34 := [  ];
__n32["variableDeclarations"] := __n34;
__n35 := [  ];
__n32["functionDeclarations"] := __n35;
__n32["codeType"] := "function";
__n32["strict"] := false;
__n29["body"] := __n32;
__n29["generator"] := false;
__n29["async"] := false;
__n29["expression"] := false;
__n21 := [ __n22, __n29 ];
__n0["functionDeclarations"] := __n21;
__n0["codeType"] := "global";
__n0["strict"] := false;
return ( false, __n0 )
}